--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:jM22,iv:Fq/LYfgiJ19f9cvlXVK9fS7hXDe/R/eFWKaVmFA5cPA=,tag:aoIF/GIog0qaPyxq6rvUJA==,type:str]
+    APIKEY: ENC[AES256_GCM,data:NOdbHUl4KcGkeE5yeaxF+a6TqllK0qZW6t8lAj+3SZU=,iv:kwTYmLHh8fUr53fkElG3yezlhMWrm0BEU9sqyUdymEo=,tag:xpdkyYTL44TQLPxnMQa6MQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             TzNDVmxIVUJueS9xNjZVTElUMmJIWUkKYw3ma1L0HmktL17gGeOKWNkTvXvMTiaA
             uPdwHcuMR1qyqhfEDiwW37uGVLh6/oB4A14b1CO+5D5ZxSmO9+9JQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:46:46Z"
-    mac: ENC[AES256_GCM,data:eOPkR+NS/SaZLy6RgmrsIuTlbMYPW0wOuzSq7O+Se9YluMHjX1IjZTVIBuw0s8hMiyzjFV66aP/Wt0lr2Pgyb1ZKrz7AF34NsqKEibXA7bZhBCZKfsYw17u5ivZKXkbucjjr06VhAytFUpAQJ3j9KmEpPAueYEpzSKDh+kT9Vr8=,iv:MY8wwYcvZtxOK3xvZ4MO5+2cPkqVlO+ahDJO7G7Sk7Q=,tag:JOHB6RIQT5B9RZ525wPlBA==,type:str]
+    lastmodified: "2024-10-22T15:33:24Z"
+    mac: ENC[AES256_GCM,data:kCO4IRocRhTmYCbeA3tI6joukjhfpxJCPIMT0LT7BP31vJrw8vqyW9KkhwifHFP0thPtKkWJepYuR0nnJUUWsv/TkyHUj50GGX2UTgjFVPRRP8oDRKPVn3bdD9QSKgnQLA4Ew51QBTXIVY9vUiUi+NmrlAOy4uGx8yWZ3jzaGck=,iv:mZ6EEphTCSdyLTR4UfLY3P4STYFS+FP2ntfQb+Ozrao=,tag:wphIhZAgTAByG9dTh0zyyA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
