--- a/kubernetes/apps/default/rocketchat/secret.sops.yaml
+++ b/kubernetes/apps/default/rocketchat/secret.sops.yaml
@@ -9,8 +9,8 @@ stringData:
     mongodb-root-password: ENC[AES256_GCM,data:UZkYd5M6aIWaqUjGv9E3N1OkKoTMoLNV8bv4aBB0tBg=,iv:b2du/tpFcEZYaBe1UGz3yKL8s+FHCFUCWeSsH7Sq2HQ=,tag:kS+OPd7D6uw4WVXLe3UIpg==,type:str]
     mongodb-metrics-password: ENC[AES256_GCM,data:8uH2Ci6oDrROU+j4gtqNNFLDMpxARypDEn8PxdYy79k=,iv:k+S2A0vq8hJdyhnr+sM8fV0/EsWOhl8nt64/G/A+6+Q=,tag:vwvZIYJOJk6WWz+DY55Oqg==,type:str]
     mongodb-replica-set-key: ENC[AES256_GCM,data:6DM6s/tAjAZmF/rv141e9sJIQQN6l6thobGRVwnaXBk=,iv:dJBB9mRcZ9mXzx9SUzLfJnIUWHQQbVhJYj6AcJ9/4hM=,tag:TAxSL8ybroj09fHlamIWeA==,type:str]
-    mongo-uri: ""
-    mongo-oplog-uri: ""
+    mongo-uri: ENC[AES256_GCM,data:3uo9W/naHfpX9HPD7asdt+9aNbsz27U9DVzOaUBoozER7cWgjqYOvFY4kPQXZygI2121II8I8n04UjFQIqouduHAHAgfUWiEByjRNIV3VopU+mS6KOqPsKlBw+l3DYZyTJD5,iv:jWHKL5ScVGs4ycBMfmKoOsq/p7tzgr4SMOkw27rJvIU=,tag:NzTj1HECwd3T2tR+ToPsJw==,type:str]
+    mongo-oplog-uri: ENC[AES256_GCM,data:Vu8XYaK74ylA663FldGStaqVNVerSltURfSnlTWdsTEVOMDrjkJq6R4AB5Am5WRFGqJp4XnmtohJ1BWTO8ssfDHcY4eQjfCW7aOGy5czkOgkiEAHG0YrIgHyS/KPPeUvolZydfoXpdUI7oaSzxt2E/p6uDC6ZE5+,iv:EqkwZ08u+bj7j/EHQrItRIV2IRe5TaagNJu8NwMe3ak=,tag:Mwn3InaM7IDv1/Et4iBKHA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             Yy9hR1NsaXUyZFRPemxzVHVNVW5MOU0Kq32or11Vl33wT2dUbnjTYVr+0J8DZJXw
             kkLaKI5JFwOsQzKze3pNhig53/G3RB+BDMBRBxmhAI3x1pljuSzE2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:45:12Z"
-    mac: ENC[AES256_GCM,data:OL1oY1h+QsD1oGwxD9Uh+SluVCuKiSz+UWgHKCgkrOBeBl6080CJV8HaeRJi2JlG6LrfPBVGP3ZlERANd+0Z0mlJZCNMmO4/hoUqaI/RdB0Okjjo44WIVAi8rEfIkaZs8J4IAgM/2WD/rpIA/TtrAZA06cQ0d0UYJi97woz/njM=,iv:HfG2qw4gcbjRciauuJxu7oreTYvHW/PDzMW20o+gLLQ=,tag:GGX0ZPRXv6q1awslFqwJ5Q==,type:str]
+    lastmodified: "2024-10-22T16:27:46Z"
+    mac: ENC[AES256_GCM,data:vCDLLaaW2HtSnc8SQFDYXMrRTa2CmSdsWBISYRWv1Q8n9PrJQ8OVkKX77cls9otkENr1GmjeeMRF/mQTXgHg5QJmRhlHGN5izU9TLgYVGsa3nYnAuDeJDnaD1rcX3R1atvZzn/Rg6PWrknT+0DJdv9v2sQikJgPqaCwgDBsLgKM=,iv:CX5rw/88tDbl2CXA3pkR9HrZ61reiBXWGOutOxmx0Cw=,tag:Cv7vLi1VYiEAjzq24yZo5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
