--- a/kubernetes/apps/default/sonarr/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:WiG3,iv:T6wTS8MMvnc7WlUstzyw3jo7MhDZIjDjOvLqrd4kNrM=,tag:j2e72a9iQZ+8Ainr91h8vA==,type:str]
+    APIKEY: ENC[AES256_GCM,data:TXwylo9k0d95KEry+4UJA3LEDJVTdCqiYqD6ylSZMOA=,iv:r3jRL7CBKW6ecqir7Wy9VnnPlBQU9Mx8CCxv/VEQyig=,tag:K5HLUnQ2G1blnUXPjQy9vA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             Q2cyTkVPL1F1K0p5Wks3aHk1T0ZwUG8KijJMYsWveXlI4cShIbY7N4gIX1E7qvTS
             rwQyKnSD4Zsc3v1s2EbKvkyZFsd15hN6Eahvlk+0jqhckKEXCE0C/w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:48:29Z"
-    mac: ENC[AES256_GCM,data:H3Ow+GB8UZ7Yp5N8MQsok+y0LxyEBmSY/9Pxmh48sTtTSPfptGcHVfA+3aqVi9ABuojcXVvfyfTSYoMzZhFr0KvBChvcEtg/SV7r8N+i1GLXZBlP9aEDuEvqUiFY1GwEsDNo3jLrUy37XBIWyszzZCCbL8ljOfn9mrmDRojrfX0=,iv:glGAQsWo9oaC3coemsfBoWDnshxZ/bsMUfEgMrRab98=,tag:SqZkjoK8JDLHnKuz7Euyfg==,type:str]
+    lastmodified: "2024-10-22T16:08:22Z"
+    mac: ENC[AES256_GCM,data:G/pHwG8GPr/VumY/jdDQqYgANO0221wmnbDXh1MG4nzmdNOAYyESbpiSH6V30nAy5lGzuq3MA5M61M2vFHTHlVWRLuCeMX+vBoWpeV6U15Ouro2IVvICgNe/9KCMyIwwWURWoEn5qFI+K6l+H/f4pXRgueHt3yCPlTchvKAUrvw=,iv:PajDfCp4YIlGV4MKO8hVpOMvq7igF8/2b1g9gh2LuKw=,tag:rVt4cLV66nag89nqjiiPAg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
