--- a/kubernetes/apps/default/doplarr/secret.sops.yaml
+++ b/kubernetes/apps/default/doplarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    TOKEN: ""
+    TOKEN: ENC[AES256_GCM,data:AQOAdxD+Ouk8jGNHDDTfuhBEsHyHYSC9GvT0e8b4vl1DDA1OVI3v2ku5kRsYcDvrcrtArxgf2Ri3q3rniqjZPTyU0vC1xQF5,iv:iId/w6CZ5D9WxrcXJQ6PxDLfy+tP3Wg7lmY16nNkOdA=,tag:33H+2yMcOvznciiKrrc0Eg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             Q09jdE1YTzVwb2VnMmlReDNjNFJFa2sKc22p4bBquDaXa/JY8xDv7dP6kC3Ef1CU
             BFl7wwo/LwtN5L+zy39NTNz7ByQ+DvVixSYDAOtDYcID8JwMtR64Gg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:46:07Z"
-    mac: ENC[AES256_GCM,data:OGqYsrp0WsOR9NQoN7wMcYJPinb7JWqIRyjmI51+0uVVF7jKauLmHDD5K7HscQ0Hevp0p8ecKmvS3z/xVzl5YsIy3bbYHJrhOnyqrJSfLTwb6bCdsHdlqHZifJx7DtorvjeqwYsKmh+b565bKm2TYzMOviaTBsQJffTrsTp3boA=,iv:h+s3oiovDqBZSvGKwbi/o6VaouYEGSj5VWHQcsYfY04=,tag:50oIhRF0AfSIiZUcQZg4mA==,type:str]
+    lastmodified: "2024-10-22T16:33:06Z"
+    mac: ENC[AES256_GCM,data:mGu0q7gLTck3aTqYTe5iwK3ttKlM5XrpfidETc4YhSIJRgEiYFdes6d70IxDJWi434Mw4+AsEmzznRKa039KWkVYA8fl1OHX/wMJpzBYhnwEw4afegifc0XkNocsL5uQKvd6x3GcdrgNqU+AF5ZJqr5FUrev67itK0OteBsKdLw=,iv:/A6B+uyYtE1Kz0HMTroZ5BWFye4ikCgsbt41U2L7mik=,tag:2ONhg93OvH70XTWrqt8w9g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
