--- a/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
+++ b/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: forgejo
 type: Opaque
 stringData:
-    email: ""
-    username: ""
-    password: ""
+    email: ENC[AES256_GCM,data:589dREAqKNNdnmud7s6u4vLeI9GImg==,iv:q6/BalU9yLtcdL9WEQiBpBrdS1mpHDd6+lrXjU2Kcew=,tag:d/XenMgU9jA8Azxz6jWYHA==,type:str]
+    username: ENC[AES256_GCM,data:nhmeDxDScw==,iv:D1vX/61wtiZuHbbvySF0hVk9jBPREtQWZ3lc7p+sXak=,tag:P5yW0UTS6IjLL15ivnOUaQ==,type:str]
+    password: ENC[AES256_GCM,data:yDOh4EAQUUYBjfd2jBk=,iv:miwUJSUyjEkqHyBgls+qKCjEL1YPLAi1Geo9l8CkUgE=,tag:JW93+DU9iHYWwrBnKfHSrQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             eWd3VkVmcU1WUW1YbTM2Z09IdkRuTVkK9MDlWX+R39ucTFzW1gx9vsdQonDzq3mO
             a/q6ZqbdszU3v3e5AOVF+mhqyv+37D0O+QvQ+u/TROEzs6YDxmZ5vw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:52:17Z"
-    mac: ENC[AES256_GCM,data:MEb0tUCtQDBpw8rQQWdfmiCZ8MOWPor8255gpFTkGPlClYhzlaSyVwXihZZ+Dp0Zc1TWBZ3aKdGPyyZgA56GWcmtTTuSg8l+BITUH5xwKlGxk63dl1PP0VO6IXpTtvKAHp7a/G4zm98OM0PJVHNteUIh6j0KAdELN57Wcxl49f0=,iv:vuJop8V0Cf8gVRv9SgxEUWu8xrkNYfeKkQh81JxiV/U=,tag:wutQWiCBFRI3L/3de/JKFg==,type:str]
+    lastmodified: "2024-10-23T13:38:56Z"
+    mac: ENC[AES256_GCM,data:jjI4Mp3n/CbPVCnnwYDvY3+T0Fbes6Wn8FanTLLasQExhHp2BzvRc1FwlV6XeeZo8i0/UIs1Ak2SyccwUg5TU8MxBN9hrZxxn6G9hwxHqSGPYlImLYC9r04vTM1VpgAyaaFpCvGDFFCZ2Ri15NNV8p7tb6BmZFqX+irShnStFN4=,iv:TQ6JWPLtU4yrQ8zPbHGKkV2nYUM3Nv2FwOff6oOFXP0=,tag:6vx1xj+jY/Qxdhh5Z38jJA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
