--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -37,9 +37,13 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: DOCKER_MODS
+                value: linuxserver/mods:universal-package-install
+              - name: INSTALL_PACKAGES
+                value: mediainfo
             image:
               repository: linuxserver/bazarr
-              tag: 1.4.5
+              tag: 1.4.6-development
           exportarr:
             enabled: false
             image:
