Update alert managera

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
       alertmanagerSpec:
         storage:
           volumeClaimTemplate:
-            selector: { }
+#            selector: { }
             spec:
               storageClassName: openebs-hostpath
               accessModes: [ "ReadWriteOnce" ]
