Re enable prometheus

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -189,7 +189,7 @@ spec:
         enabled: false
         flavor: cilium
     prometheus:
-      enabled: false
+      enabled: true
       networkPolicy:
         enabled: false
         flavor: cilium
