Adds permissions to flux resources for holmes

--- a/kubernetes/apps/monitoring/robusta/robusta.yaml
+++ b/kubernetes/apps/monitoring/robusta/robusta.yaml
@@ -35,6 +35,17 @@ spec:
     holmes:
       registry: docker.io/stiforr
       image: holmes:latest
+      customClusterRoleRules:
+        - apiGroups:
+            - "source.toolkit.fluxcd.io"
+            - "kustomize.toolkit.fluxcd.io"
+            - "helm.toolkit.fluxcd.io"
+          resources:
+            - "*"
+          verbs:
+            - "get"
+            - "list"
+            - "watch"
       toolsets:
         - name: "flux_cli"
           prerequisites:
