--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -224,3 +224,6 @@ spec:
           - job_name: 'adguard'
             static_configs:
               - targets: [ '192.168.1.164:9618' ]
+          - job_name: 'qbittorrent'
+            static_configs:
+              - targets: ['192.168.1.230:8000']
