--- a/kubernetes/apps/monitoring/robusta/robusta.yaml
+++ b/kubernetes/apps/monitoring/robusta/robusta.yaml
@@ -64,9 +64,9 @@ spec:
               name: robusta-secrets
     globalConfig:
       alertmanager_url: http://kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local:9093
-      alertmanager_flavor: grafana
+#      alertmanager_flavor: grafana
       account_id: "{{ env.ACCOUNT_ID }}"
-      grafana_api_key: "{{ env.GRAFANA_KEY }}"
+#      grafana_api_key: "{{ env.GRAFANA_KEY }}"
       grafana_url: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:3000
       prometheus_url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
       prometheus_additional_labels:
