--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kube-state-metrics-config.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kube-state-metrics-config.yaml
@@ -2,32 +2,18 @@ kube-state-metrics:
   # For kube-prometheus-stacks that are already installed and configured with
   # custom collectors, commenting out the collectors and extraArgs below will
   # retain any existing kube-state-metrics configuration.
-  collectors: [ ]
+#  collectors: [ ]
 #  extraArgs:
 #    - --custom-resource-state-only=true
   rbac:
     extraRules:
       - apiGroups:
-          - ""
           - source.toolkit.fluxcd.io
           - kustomize.toolkit.fluxcd.io
           - helm.toolkit.fluxcd.io
           - notification.toolkit.fluxcd.io
           - image.toolkit.fluxcd.io
-          - extensions
-          - apps
-          - authentication.k8s.io
-          - autoscaling
         resources:
-          - horizontalpodautoscalers
-          - tokenreviews
-          - statefulsets
-          - daemonsets
-          - deployments
-          - replicasets
-          - daemonsets
-          - deployments
-          - replicasets
           - gitrepositories
           - buckets
           - helmrepositories
@@ -41,18 +27,6 @@ kube-state-metrics:
           - imagerepositories
           - imagepolicies
           - imageupdateautomations
-          - configmaps
-          - secrets
-          - nodes
-          - pods
-          - services
-          - resourcequotas
-          - replicationcontrollers
-          - limitranges
-          - persistentvolumeclaims
-          - persistentvolumes
-          - namespaces
-          - endpoints
         verbs: [ "list", "watch" ]
   customResourceState:
     enabled: true
