--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 resources:
   - helmrelease.yaml
   - ./secret.sops.yaml
-#configMapGenerator:
-#  - name: flux-kube-state-metrics-config
-#    namespace: monitoring
-#    files:
-#      - kube-state-metrics-config.yaml
-#    options:
-#      labels:
-#        app.kubernetes.io/part-of: flux
-#        app.kubernetes.io/component: monitoring
+configMapGenerator:
+  - name: flux-kube-state-metrics-config
+    namespace: monitoring
+    files:
+      - kube-state-metrics-config.yaml
+    options:
+      labels:
+        app.kubernetes.io/part-of: flux
+        app.kubernetes.io/component: monitoring
 configurations:
   - kustomizeconfig.yaml
