--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: radarr-apikey
+    name: radarr-secret
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:NOdbHUl4KcGkeE5yeaxF+a6TqllK0qZW6t8lAj+3SZU=,iv:kwTYmLHh8fUr53fkElG3yezlhMWrm0BEU9sqyUdymEo=,tag:xpdkyYTL44TQLPxnMQa6MQ==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:PaH76dUM,iv:AN/5YHzDZBCFXzWAqpnPQ5r31czsFIwWqhzszdKc0a4=,tag:CjARBFumNo4Sa6jOQubvSw==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:4lOHoTHBOw==,iv:v3h3BGoC/QwWtxhO+WHwIjWnOjqsvgTYVja+V6PeeIo=,tag:2gzr5YGrBlCMBp5kL6COpw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             TzNDVmxIVUJueS9xNjZVTElUMmJIWUkKYw3ma1L0HmktL17gGeOKWNkTvXvMTiaA
             uPdwHcuMR1qyqhfEDiwW37uGVLh6/oB4A14b1CO+5D5ZxSmO9+9JQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T15:33:24Z"
-    mac: ENC[AES256_GCM,data:kCO4IRocRhTmYCbeA3tI6joukjhfpxJCPIMT0LT7BP31vJrw8vqyW9KkhwifHFP0thPtKkWJepYuR0nnJUUWsv/TkyHUj50GGX2UTgjFVPRRP8oDRKPVn3bdD9QSKgnQLA4Ew51QBTXIVY9vUiUi+NmrlAOy4uGx8yWZ3jzaGck=,iv:mZ6EEphTCSdyLTR4UfLY3P4STYFS+FP2ntfQb+Ozrao=,tag:wphIhZAgTAByG9dTh0zyyA==,type:str]
+    lastmodified: "2024-10-25T14:07:33Z"
+    mac: ENC[AES256_GCM,data:k14PeGM++g0tf5cxIMVO+t0uym3NjjvH29/N8U4qubumTlF2cK0LSEJ1xGyarexnXRgHGzvdhzxOX4YqFO1SfKAf7nFh8BdJ96hglSoPIMq9Q3wuWJWsThJKYZ8I89PSUhV9N5s5fyYeIBU/pgXyppha8rxuSr2hBSZkRVCfj3Y=,iv:hFJfCDgUwF9U2EVFy1FXolFLOoyKI9t40gbQu1E/3Lw=,tag:99AoNt/XmQt87Y3yZXh9BQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
