--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -13,11 +13,13 @@ spec:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
-      version: 3.4.0
+      version: 3.5.1
   interval: 12h0m0s
   releaseName: radarr
   targetNamespace: default
   values:
+    defaultPodOptions:
+      automountServiceAccountToken: false
     controllers:
       main:
         annotations:
@@ -48,11 +50,6 @@ spec:
                   secretKeyRef:
                     name: radarr-secret
                     key: AUTH_USERNAME
-#              - name: APIKEY
-#                valueFrom:
-#                  secretKeyRef:
-#                    name: radarr-apikey
-#                    key: APIKEY
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.0.1
