--- a/kubernetes/apps/default/mailu/app/kustomization.yaml
+++ b/kubernetes/apps/default/mailu/app/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  labels:
+    substitution.flux.home.arpa/disabled: true
 resources:
-  - ./secret.sops.yaml
   - ./mailu.yaml
