--- a/kubernetes/apps/default/mailu/ks.yaml
+++ b/kubernetes/apps/default/mailu/ks.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 metadata:
   name: cluster-apps-mailu
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/disabled: true
 spec:
   interval: 24h
   prune: true
