--- a/kubernetes/apps/default/mailu/config/secret.sops.yaml
+++ b/kubernetes/apps/default/mailu/config/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    roundcube-password: ENC[AES256_GCM,data:3S+zafGNQT1QpGSFXTTAvH20efrFocLhNbUX0cEvADU=,iv:XnDjKHgSAc5HIbOmr61Dgq+gdz6ZL/U6cykJe03OO3g=,tag:yumEg6k+tFe0XsHiiANHtQ==,type:str]
-    secret-key: ENC[AES256_GCM,data:F7zPLo7CoAnx4voEF/faeVeuwX+igJkycFXW8omBI1A=,iv:r+4sYxqMvz2t86F3cQEOeifjC++i9mYvwxJBghfat7o=,tag:bjKJ9ldnNSP4Gwv76fB7iA==,type:str]
+    roundcube-password: ENC[AES256_GCM,data:k7S3eIYH4kfyYIFGe5I=,iv:JgMOvqZoFIDEeh6J8svNhUyajgYdA1aNOb+T9wcvNYI=,tag:k0r/4jdRIe1jlFXrY2Eh5Q==,type:str]
+    secret-key: ENC[AES256_GCM,data:0tbW/YlsMLPb8Ud4NmU=,iv:7ha0kHe9JVI1JRXj6Qs3a1d6MinZ6XwZ5chrT8kqJDs=,tag:xYZoVCG4upRSc7CbKI2j2g==,type:str]
     user-password: ENC[AES256_GCM,data:PuvcDGGS6khI,iv:1bdEVBt5C7c4Y9Eh30AUmjHMF7xAlQ/OeaLKiI3rNic=,tag:FPBt/+Hf5DW1jWl2RIctGw==,type:str]
-    mariadb-root-password: ENC[AES256_GCM,data:uujh32/U9seyAA+BmvIW6iB61l6sWiw/GZuUdez7sbQ=,iv:YtCephRPTjcWurQLMJhiMRG6Ew1r9w3YkU9DDt1EVYY=,tag:uE9ok3GGGsXA/MVZNtuPtA==,type:str]
-    mariadb-replication-password: ENC[AES256_GCM,data:rPG4PS5KBpczPvOrqR+Tg2qnQG3pkPnRwonwJyALBv0=,iv:e4+f4Gzgiji4KYwPdAsymlWgyGlHkC9B2keA9crxwPE=,tag:RTTkMBqOrzWhkQmcMO9dtw==,type:str]
-    mariadb-password: ENC[AES256_GCM,data:daLKQD5s5Z9IMOHI81fWgJkPDZUE19C9y9gZGBWZYB0=,iv:8kj0AqBlos+0Xgnly/abNxjh/HXQuWnBa8MeY/jnV6U=,tag:MKkKjXRzQ4kMiCONbDqjRQ==,type:str]
+    mariadb-root-password: ENC[AES256_GCM,data:XfRPo+YGlMNPHKgoluc=,iv:LEol8mmohr6uIjKO5Z8pqTKoxr1r4eQQqcvD6vqYSeQ=,tag:zhjRt86hps+BL9QDpIESlQ==,type:str]
+    mariadb-replication-password: ENC[AES256_GCM,data:EDwa979XLZCI76fAprc=,iv:z4Y4LC0n6TTHEfzaNLnGCtnn6YcHff+r1pJwoWt3vQ4=,tag:C5qwzUz60xR5Afs/1uJ6ow==,type:str]
+    mariadb-password: ENC[AES256_GCM,data:m7LRs6UDlBEn/hgKxL8=,iv:E+Z06F8ZFg53d3VWgTnfsU+5bkHSKc2JXGYUnT9rn9I=,tag:cxqwWBpmqem+gWpITBlPUQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             R0E2QjFBRG90Ry9sOFAvSW1jSmhFd2cKsnyVZmejWVSRewJAdbj1RJw/my2zAQ8D
             33bxJ/SFIT0TIdKKyQN2A4nBagpO40JP6wXiH8d19fKAd07i4J3MUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-28T18:32:52Z"
-    mac: ENC[AES256_GCM,data:pQa6RHQyybOd4VlMYI/veS0tJnsmTQdIr/qTYT8ky4xma1NEKIDHfsRTHL0DyY3tnOc4NNflaNh2InUNGU0iYUXw8HykbSmCFqkxWk50wRUP5NAx80goXNXqWMxDtG5okVsUKR4atDk4y8AlBuLCaUqStdz9iQ59Q1QLvXrLlAQ=,iv:9bMosLS6y+cROnONSEnAeTdsRsMvgeUsr7K/PJGbl4U=,tag:nlc5hcfEJ1gLDKbyfhGe2A==,type:str]
+    lastmodified: "2024-10-28T18:39:18Z"
+    mac: ENC[AES256_GCM,data:xn2577tEcHu85VOn59YbSuI5xLDXRtKdB5/VxIQIm2QIfD7f28Q2TOtAaTySRb9HragR8p/waAzyRCBNJJLHZcSPKHTwjhXm4TtgQ9PFfOOwiZG1vEkPqj6qt+c526p5NX27eyfhNDKOLoqIrtyYL93Y9VrSwbdfS4mD1iGHqek=,iv:x25e4+zrr0gvBEUGb1jmMLbGgdvT/6ZYB4qHxJM9WFY=,tag:vQNugSO3qKVc177/0muk5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
